<?xml version="1.0" encoding="UTF-8"?>
<!--

    SPDX-License-Identifier: MIT
    See LICENSE file for details.

    Copyright 2010-2026 The Waffle Project Contributors: https://github.com/Waffle/waffle/graphs/contributors

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.waffle</groupId>
        <artifactId>waffle</artifactId>
        <version>3.6.1-SNAPSHOT</version>
    </parent>

    <groupId>com.github.waffle</groupId>
    <artifactId>waffle-spring-boot4</artifactId>
    <version>3.6.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>waffle-spring-boot4</name>
    <description>Sping Boot 4 Integration for WAFFLE</description>
    <url>https://waffle.github.io/waffle/</url>

    <modules>
        <module>waffle-spring-boot-autoconfigure4</module>
        <module>waffle-spring-boot-starter4</module>
    </modules>

    <scm>
        <connection>scm:git:ssh://git@github.com/waffle/waffle.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/waffle/waffle.git</developerConnection>
        <tag>HEAD</tag>
        <url>https://github.com/Waffle/waffle</url>
    </scm>

    <properties>
        <!-- Maven compiler options -->
        <java.version>17</java.version>
        <java.release.version>17</java.release.version>

        <!-- Dependencies -->
        <jna.version>5.19.1</jna.version>
        <log4j.version>2.26.1</log4j.version>
        <spring-boot.version>4.1.1</spring-boot.version>
        <spring-security.version>7.1.1</spring-security.version>

        <!-- Automatic Module Name for JPMS -->
        <module.name>waffle.spring.boot4</module.name>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Internal Dependencies -->
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>waffle-spring-security7</artifactId>
                <version>${project.version}</version>
                <scope>compile</scope>
            </dependency>

            <!-- External Dependencies -->
            <!-- Resolve conflict between WAFFLE and Spring Boot dependency version by forcing jna version -->
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna</artifactId>
                <version>${jna.version}</version>
            </dependency>
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna-platform</artifactId>
                <version>${jna.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-bom</artifactId>
                <version>${spring-security.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Ensure latest log4j for security precaution -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-bom</artifactId>
                <version>${log4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <configuration>
                        <rules>
                            <enforceBytecodeVersion>
                                <excludes>
                                    <!-- Openssl contains panama for jdk 22 or higher if enabled via listener 'org.apache.catalina.core.OpenSSLLifecycleListener' -->
                                    <exclude>org.apache.tomcat.embed:tomcat-embed-core</exclude>
                                </excludes>
                            </enforceBytecodeVersion>
                        </rules>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
